force-app/main/default/objects/Village_Privacy_Policy_URLs__c/Village_Privacy_Policy_URLs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used in HFS app for multilanguage Ts&amp;Cs and Privacy Policies</description>
    <label>Village Privacy Policy URLs</label>
</CustomObject>