force-app/main/default/objects/Village_Privacy_Policy_URLs__c/fields/LGL_Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>LGL_Terms_And_Conditions__c</fullName>
    <description>Terms and conditions for the Lugagge &amp; Loans new Service Request Form</description>
    <label>Lugagge &amp; Loans Terms</label>
    <type>Url</type>
</CustomField>