force-app/main/default/objects/Village_Privacy_Policy_URLs__c/fields/Privilege_Terms_Condition__c.field-meta.xml
<CustomField>
    <fullName>Privilege_Terms_Condition__c</fullName>
    <label>Privilege Terms Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>