force-app/main/default/objects/Village_Privacy_Policy_URLs__c/fields/Village_Privacy_Notice_Link__c.field-meta.xml
<CustomField>
    <fullName>Village_Privacy_Notice_Link__c</fullName>
    <label>Village Privacy Notice Link</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>