force-app/main/default/objects/Village_Privacy_Policy_URLs__c/fields/Village_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Village_Terms_and_Conditions__c</fullName>
    <description>.</description>
    <label>Village Terms and Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>