force-app/main/default/objects/Village_Privacy_Policy_URLs__c/fields/VillageLink__c.field-meta.xml
<CustomField>
    <fullName>VillageLink__c</fullName>
    <description>village-privacy-notice.</description>
    <label>VillageLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>